--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,4 +20,6 @@ jobs:
       - run: bun install --frozen-lockfile
       - run: bun test
       - run: bun run build
+
+      - run: npm install -g npm@latest
       - run: npm publish
